# rt

./: .gitignore  CMakeLists.txt  default.nix
sandbox/: test.ply
src/: CMakeLists.txt  main.cpp  math.cpp  math.h  ray.cpp  ray.h
src/render/: CMakeLists.txt  debug.cpp  debug.h  debugStrategy.h  gridSubimageWalker.h  image.cpp  image.h  monteCarloRayTracer.h  nullPixelListener.cpp  nullPixelListener.h  nullRayListener.cpp  nullRayListener.h  nullSampleListener.cpp  nullSampleListener.h  nullSubimageListener.cpp  nullSubimageListener.h  passCountHaltingStrategy.h  pixel.cpp  pixel.h  pixelSampleDistribution.cpp  pixelSampleDistribution.h  poissonDiskSampleDistribution.cpp  poissonDiskSampleDistribution.h  previewWindow.cpp  previewWindow.h  previewWindowDebugStrategy.h  renderTask.h  renderer.h  sample.cpp  sample.h  sampleStrategy.h  simpleHaltingStrategy.cpp  simpleHaltingStrategy.h  simplePixelWalker.h  simpleRayCaster.cpp  simpleRayCaster.h  simpleRayTracer.cpp  simpleRayTracer.h  simpleRayWalker.h  simpleSampleDistribution.cpp  (+12 more)
src/scene/: CMakeLists.txt  aabb.cpp  aabb.h  bvh.h  camera.cpp  camera.h  drawableObject.cpp  drawableObject.h  lens.cpp  lens.h  materialProperties.cpp  materialProperties.h  perspectiveCamera.cpp  perspectiveCamera.h  plane.cpp  plane.h  plyLexer.ll  plyParser.ypp  pointLight.cpp  pointLight.h  scene.cpp  scene.h  sceneObject.cpp  sceneObject.h  sphere.cpp  sphere.h  triangleMesh.cpp  triangleMesh.h  triangleMeshBuilder.cpp  triangleMeshBuilder.h
